# FastAPI-RAG-Chroma

./: .env  README.md  main.py  pyproject.toml
api/v1/: chat.py  files.py
db/: __init__.py
schemas/: files.py
services/: rag.py
vectordb/: chroma.sqlite3
